--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,19 @@
   <div class="row">
     <div class="col-xs-12">
       <h2>Mes Appareils</h2>
+      <p>Mise à jour: {{ lastUpdate | async | date: 'short' }}</p>
       <ul class="list-group">
-        <app-appareil appareilName="Machine à Laver"></app-appareil>
-        <app-appareil appareilName="Frigo"></app-appareil>
-        <app-appareil appareilName="Ordinateur"></app-appareil>
+        <app-appareil *ngFor="let appareil of appareils; let i = index"
+                      [appareilName]="appareil.name"
+                      [appareilStatus]="appareil.status"
+                      [index]="i"></app-appareil>
       </ul>
       <button class="btn btn-success"
               [disabled]="!isAuth"
-              (click)="onAllumer()">Start All</button>
+              (click)="onAllumer()">Tout Allumer</button>
+      <button class="btn btn-danger"
+              [disabled]="!isAuth"
+              (click)="onEteindre()">Tout Eteindre</button>
     </div>
   </div>
 </div>
