--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,23 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h2>Mes Appareils</h2>
-      <p>Mise à jour: {{ lastUpdate | async | date: 'short' }}</p>
-      <ul class="list-group">
-        <app-appareil *ngFor="let appareil of appareils; let i = index"
-                      [appareilName]="appareil.name"
-                      [appareilStatus]="appareil.status"
-                      [index]="i"></app-appareil>
-      </ul>
-      <button class="btn btn-success"
-              [disabled]="!isAuth"
-              (click)="onAllumer()">Tout Allumer</button>
-      <button class="btn btn-danger"
-              [disabled]="!isAuth"
-              (click)="onEteindre()">Tout Eteindre</button>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li routerLinkActive="active"><a routerLink="auth">Authentification</a></li>
+              <li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
+              <li routerLinkActive="active"><a routerLink="edit">Nouvel Appareil</a></li>
+              <li routerLinkActive="active"><a routerLink="users">Utilisateurs</a></li>
+            </ul>
+            <div class="navbar-right">
+              <p>Vous êtes connecté depuis {{ secondes }} secondes</p>
+            </div>
+          </div>
+        </div>
+      </nav>   
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
 
-<router-outlet></router-outlet>
